--- a/shopro.css
+++ b/shopro.css
@@ -3,3 +3,8 @@ button{
     background-color: rgb(1, 13, 8);
     color: azure;
 }
+button:hover{
+    border-radius: 10px;
+    transition: 1s;
+    
+}
