--- a/Shopro/shopro.css
+++ b/Shopro/shopro.css
@@ -1,34 +1,33 @@
-button{
-    align-items: center;
-    background-color: rgb(1, 13, 8);
-    color: azure;
-    height: 30px;
-    width: 80px;
-}
-button:hover{
-    border-radius: 30px;
-    transition: .000000005s;
+*{
+    margin: 0;
+    font-family: Arial;
+    
     
 }
-body{
-    background-image: url(bg.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
+.navbar {
+    height: 100px;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    display: flex;
+
 }
-div
-{
-    background-color: white;
-    width: 220px;
-    border: 5px solid black;
-    border-color: black;
-    padding: 70px;
-    margin: 50px;
-    align-items: center;
-    position:relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    border-radius: 40px;
+.navlogo {
+    height: 50px;
+    width: 100px;
+}
+
+.logo {
+    background-image: url("SHOPro.png");
+    background-size: cover;
+    height: 100px;
+    width: 140px;
+    padding-top: 0px;
+    padding: 0px 0px 0px 0px;
+    image;
+}
+.border {
+    border: 1.5px solid transparent;
+}
+.border:hover {
+    border: 1.5px solid white;
 }
