--- a/Shopro/home.css
+++ b/Shopro/home.css
@@ -191,9 +191,10 @@
     border-radius: 10px;
     font-weight: bold;
     font-style: inherit;
-    color: rgb(11, 3, 3);
+    color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration-skip: 20px;
+    margin-top: 50px;
     
 }
 
@@ -206,14 +207,14 @@
     padding:20px;
     margin: 10px;
     position:relative;
-    top: 70px;
+    top: 5px;
     left: 400px;
     transform: translate(-50%, -50%);
     text-align: center;
     border-radius: 10px;
     font-weight: bold;
     font-style: inherit;
-    color: rgb(14, 5, 5);
+    color:white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
 }
@@ -224,11 +225,11 @@
     width: 200px;
     border: 3px solid rgb(72, 7, 75);
     border-color: rgb(240, 239, 247);
-    color: rgb(15, 4, 4);
+    color: white;
     padding:20px;
     margin: 10px;
     position:relative;
-    top: 70px;
+    top: 10px;
     left: 400px;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -238,19 +239,23 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
 }
+.hero-section{
+    margin-left: 600px;
+}
 
 .register
 {
     font-weight: 700;
     border-radius: 5px;
     border: 2px solid rgb(157, 108, 162);
+    height: 40px;
 }
 .register:hover{
     border-color: rgb(157, 130, 160);
 }
 
 .login:hover{
-    border-color:  rgb(157, 130, 160);
+    border-color:  rgb(44, 2, 48);
 }
 
 .login
@@ -258,6 +263,9 @@
     font-weight: 700;
     border-radius: 4px;
     border-color:  rgb(157, 130, 160);
+    height: 40px;
+    width: 100px;
+    
     
 }
 
@@ -265,7 +273,7 @@
     width: 300px;
     font-size: larger;
     font-weight: 700;
-    color: rgb(52, 1, 57);
+    color: white;
     margin-left: 20px;
     margin-top:40px;
     font-style: oblique;   
@@ -277,15 +285,19 @@ a{
 }
 
 .br{
-    width: 300px;
-    font-size: larger;
-    font-weight: 1400;
-    color: rgb(60, 14, 67);
-    margin: 20px;
-    font-style: oblique;    
+    width: 250px;
+    height:40px;
+    margin:0%;
+    font-style: oblique;   
+    background-color:rgb(88, 41, 106);
+    justify-content: space-evenly;
+    text-align: center;
+    border-top: 5px;
+    
+
 }
-.list :hover{
-    color: rgb(194, 164, 194);
+.br:hover{
+    background-color: #250a32;
 }
 .horizontal{
     display: flex;
@@ -322,6 +334,12 @@ a{
 
 }
 
+.horizontal{
+    background-image: url(https://media.istockphoto.com/photos/electronics-shopping-picture-id171276224?s=170667a);
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: 350px;
+}
 .Laptops
 {
     background-image: url(laptops.jpeg);
@@ -387,3 +405,4 @@ a{
 .textfoot{
     font-style: oblique;
 }
+
